# tsu_pipeline

./: .env.example  .gitignore  CLAUDE.md  LOGBUCH.md  OFFENE_ENTSCHEIDUNGEN.md  PROJECT_BRIEFING.md  WEBSITE_ANBINDUNG.md  backfill_start_offset.py  e2e_validate.py  generate_autorun.py  migrate_elo_history.py  pipeline_run.py  pyproject.toml  recalc_elo.py  relabel_casual_heat.py  run_pipeline.sh
migrations/: 001_base_schema.sql  002_elo_bootstrap.sql  003_mart_views.sql  004_fastest_lap.sql  005_tire_stints.sql  006_race_start_offset.sql
tests/: conftest.py  test_details_parser.py  test_elo.py  test_loader.py  test_validate.py
tests/fixtures/: heat_race_1.json  heat_race_2.json  race_with_bots.json  race_with_bots_2.json  sentinel_hotlap.json
tsu_pipeline/: batch.py  details_parser.py  elo.py  keys.py  loader.py  validate.py
